--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <header>
         <nav>
             <h1>Focus On Flowers</h1>
-            <a href="index.html">Anasayfa</a>
-            <a href="arsiv.html">Arşiv</a>
-            <a href="hakkimizda.html">Hakkımızda</a>
-            <a href="iletisim.html">İletişim</a>
-            <h3>Ana Sayfa</h3>
+                <ul class="menu">
+                    <li><a href="index.html">Anasayfa</a></li>
+                    <li><a href="arsiv.html">Arşiv</a></li>
+                    <li><a href="hakkimda.html">Hakkımda</a></li>
+                    <li><a href="iletisim.html">İletişim</a></li>
+                </ul>
+            <h2>Ana Sayfa</h2>
             <p>
                 Focus On Flowers sitesine hoşgeldiniz! Kendi evimde gözüm gibi baktığım <a href="arsiv.html"><b>çiçeklerimi</b></a> satışa çıkarıyorum!
             </p>
                 <h4 class="fs-20 text-coral">Sitede Mevcut Olan Çiçek Türleri</h4>
+            
             <ul >
                 <li>Monstera</li>
                 <li>Barış Çiçeği</li>
@@ -27,7 +30,7 @@
                 <li>Para Ağacı</li>
                 <li>Pothos Sarmaşığı</li>
             </ul>
-
+            
         </nav>
     </header>
 
