--- a/hakkimda.html
+++ b/hakkimda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İletişim</title>
+    <title>Hakkımda</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,11 +17,11 @@
             <li><a href="hakkimda.html">Hakkımda</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
         </ul>
-        <h2>İletişim</h2>
-        <p>Benimle iletişime geçmek için;
-            <li>e-mail:ozturkszn@gmail.com</li>
+        <h2>Hakkımda</h2></header> 
+        <p>
+        Merhaba ben Suzan. Pandemi başladığından beri bitki bakmak beni en çok rahatlatan hobilerim arasında. Bitki bakımı sadece bakmak için güzel çiçeklere sahip olmaktan daha fazlası benim için, bu bir tutku.
+        Evimde çok fazla bitki var ve çoğaltma işlemi ile farklı ortamlarda yetiştirmeye çalışarak bir çok şeyi öğrenebiliyorum. Artık sayıca fazla olmalarından dolayı satışa çıkarmayı düşündüm.
         </p>
-        </nav>
-    </header>
+    </nav>
 </body>
 </html>
