--- a/arsiv.html
+++ b/arsiv.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Focus On Flowers</h1>
-    <ul class="menu">
-        <li><a href="index.html">Anasayfa</a></li>
-        <li><a href="arsiv.html">Arşiv</a></li>
-        <li><a href="hakkimda.html">Hakkımda</a></li>
-        <li><a href="iletisim.html">İletişim</a></li>
-    </ul>
-    <h2>Arşiv</h2>
+    <header>
+        <nav>
+        <h1>Focus On Flowers</h1>
+        <ul class="menu">
+            <li><a href="index.html">Anasayfa</a></li>
+            <li><a href="arsiv.html">Arşiv</a></li>
+            <li><a href="hakkimda.html">Hakkımda</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
+        </ul>
+    </header>
+        <h2>Arşiv</h2>
+        <ol >
+            <li><img src="img/monstera.jpg" alt="Monstera" width="400" height="400"> <p>Monstera (Deve Tabanı) 150 ₺</p></li>
+            <li><img src="img/baris_cicegi.jpg" alt="Barış Çiçeği" width="400" height="400"> <p>Barış Çiçeği 80 ₺</p></li>
+            <li><img src="img/madagaskar_yasemini.jpg" alt="Madagaskar Yasemini"><p>Madagaskar Yasemini 200 ₺</p></li>
+            <li><img src="img/para_agaci.jpg" alt="Para Ağacı"><p>Para Ağacı 100 ₺</p></li>
+            <li><img src="img/potos.jpg" alt="Pothos Sarmaşığı"><p>Pothos Sarmaşığı 70 ₺</p></li>
+        </ol>
+        </nav>
 </body>
 </html>
