--- a/iletisim.html
+++ b/iletisim.html
@@ -19,7 +19,7 @@
         </ul>
         <h2>İletişim</h2>
         <p>Benimle iletişime geçmek için;
-            <li>e-mail:ozturkszn@gmail.com</li>
+            <li><i>e-mail:ozturkszn@gmail.com</i></li>
         </p>
         </nav>
     </header>
