--- a/hakkimda.html
+++ b/hakkimda.html
@@ -17,9 +17,10 @@
             <li><a href="hakkimda.html">Hakkımda</a></li>
             <li><a href="iletisim.html">İletişim</a></li>
         </ul>
-        <h2>Hakkımda</h2></header> 
+    </header> 
+        <h2>Hakkımda</h2>
         <p>
-        Merhaba ben Suzan. Pandemi başladığından beri bitki bakmak beni en çok rahatlatan hobilerim arasında. Bitki bakımı sadece bakmak için güzel çiçeklere sahip olmaktan daha fazlası benim için, bu bir tutku.
+        Merhaba ben Suzan. Pandemi başladığından beri bitki bakmak beni en çok rahatlatan hobilerim arasında. Bitki bakımı sadece bakmak için güzel çiçeklere sahip olmaktan daha fazlası benim için, bu bir tutku. <br>
         Evimde çok fazla bitki var ve çoğaltma işlemi ile farklı ortamlarda yetiştirmeye çalışarak bir çok şeyi öğrenebiliyorum. Artık sayıca fazla olmalarından dolayı satışa çıkarmayı düşündüm.
         </p>
     </nav>
